--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,13 @@
 body {
   background-color: #8189d9;
 }
+ul {
+  margin-top: 50px;
+  font-family: Comic Sans MS, Comic Sans, cursive;
+  letter-spacing: 0.2rem;
+  font-weight: 400;
+  -webkit-text-stroke: 1px #ff9c6b;
+}
 
 .home {
   width: 50px;
@@ -27,12 +34,12 @@ body {
 }
 .intro_text {
   color: transparent;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Comic Sans MS, Comic Sans, cursive;
   letter-spacing: 0.1rem;
   font-weight: 800;
   -webkit-text-stroke: 2px #ff9c6b;
   font-size: 50px;
-  margin: 60px 0 0 0;
+  margin: 60px 0 60px 0;
   padding: 0;
 }
 .names {
@@ -60,6 +67,8 @@ body {
 p {
   color: #f1c5f7;
   margin: 30px 0 30px 0;
+  font-family: Comic Sans MS, Comic Sans, cursive;
+  font-size: 20px;
 }
 .general-text {
   margin: auto;
@@ -84,7 +93,7 @@ table.table-bordered {
 .homepageEnd {
   position: fixed;
   left: 50%;
-  bottom: 20px;
+  bottom: 10px;
   transform: translate(-50%, -50%);
   margin: 0 auto;
 }
@@ -132,4 +141,14 @@ table.table-bordered {
   .footer {
     order: 3;
   }
+}
+.shorties {
+  margin: auto;
+  display: block;
+  text-align: center;
+  font-size: 20px;
+  max-width: 60%;
+}
+.repo {
+  width: 100px;
 }
