--- a/styles.css
+++ b/styles.css
@@ -142,13 +142,19 @@ table.table-bordered {
     order: 3;
   }
 }
-.shorties {
-  margin: auto;
-  display: block;
-  text-align: center;
-  font-size: 20px;
-  max-width: 60%;
-}
 .repo {
   width: 100px;
+}
+
+.shorties-box {
+  margin-top: 100px;
+  text-align: center;
+}
+
+h2 {
+  color: #f1c5f7;
+  font-family: Comic Sans MS, Comic Sans, cursive;
+  letter-spacing: 0.1rem;
+  font-weight: 600;
+  font-size: 30px;
 }
