--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,17 @@
 body {
   background-color: #8189d9;
 }
+.container {
+  background-color: #404baa;
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  overflow: auto;
+  box-shadow: 20px 10px 20px #131c5e;
+}
 ul {
-  margin-top: 50px;
   font-family: Comic Sans MS, Comic Sans, cursive;
   letter-spacing: 0.2rem;
   font-weight: 400;
@@ -26,11 +35,11 @@ ul {
   font-size: 20px;
 }
 
-.home-intro {
+/* .home-intro {
   margin: 100px 0 0 0;
   display: block;
   text-align: center;
-}
+} */
 .intro_text {
   color: transparent;
   font-family: Comic Sans MS, Comic Sans, cursive;
@@ -38,17 +47,27 @@ ul {
   font-weight: 800;
   -webkit-text-stroke: 2px #ff9c6b;
   font-size: 50px;
-  margin: 60px 0 60px 0;
+  margin: 40px auto 40px auto;
   padding: 0;
+  display: block;
+  text-align: center;
 }
 .names {
   color: #ff9c6b;
 }
 .gadget_drawing {
   width: 250px;
-  display: inline-block;
-  margin: auto;
+  display: block;
   padding: 0px;
+  /* border: 5px solid #f1c5f7;
+    box-shadow: 5px 10px 20px #131c5e;
+  border-radius: 50%; */
+  display: block;
+  margin: 50px auto 30px auto;
+}
+.gadget_container {
+  background-image: url("pictures/circuitsTurq.png");
+  background-size: 1200px;
 }
 .contacts-box {
   margin: 100px 0 0 0;
@@ -75,7 +94,7 @@ p {
   max-width: 60%;
 }
 .certificate {
-  width: 700px;
+  width: 500px;
   margin: 10px 0 40px 0;
 }
 .table-info {
@@ -144,8 +163,17 @@ table.table-bordered {
 }
 
 .shorties-box {
-  margin-top: 100px;
+  width: 50px;
+  height: auto;
+  margin: 90px auto 10px auto;
+  padding: 10px;
+  position: relative;
   text-align: center;
+  border: 2mm ridge #f1c5f7;
+  width: fit-content;
+  align-items: center;
+  border-radius: 25px;
+  box-shadow: 10px 10px 20px #131c5e;
 }
 
 h2 {
