--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,8 @@ ul {
   color: #f1c5f7;
   font-size: 20px;
   text-align: center;
-  padding: 20px;
+  padding: 10px;
+  margin: 10px;
 }
 .nav-link:hover {
   color: #ff9c6b;
@@ -78,7 +79,7 @@ ul {
 }
 p {
   color: #f1c5f7;
-  margin: 30px 0 30px 0;
+  margin: 30px 10px 30px 10px;
   font-family: Comic Sans MS, Comic Sans, cursive;
   font-size: 20px;
 }
@@ -87,7 +88,6 @@ p {
   display: block;
   text-align: center;
   font-size: 20px;
-  max-width: 60%;
 }
 .certificate {
   width: 500px;
