--- a/styles.css
+++ b/styles.css
@@ -207,20 +207,24 @@ h2 {
   width: 400px;
   height: 500px;
   margin-top: 10px;
-  line-height: 150px;
   font-weight: bold;
   font-size: 3em;
   text-align: center;
   border-radius: 5%;
 }
-.flex-item img {
+
+.flex-item .img_container {
+  height: 50%;
   margin-top: 10px;
-  height: 60%;
-  width: 93%;
+  width: 100%;
   border-radius: 5%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-color: white;
+  background-position: center;
 }
 .flex-item .project_text {
   font-family: Comic Sans MS, Comic Sans, cursive;
-  font-size: 30px;
+  font-size: 18px;
   color: #7572db;
 }
