--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ h2 {
 }
 
 .flex-item {
-  background: #f1c5f7;
+  background-color: #f1c5f7;
   padding: 5px;
   width: 400px;
   height: 500px;
@@ -212,7 +212,9 @@ h2 {
   text-align: center;
   border-radius: 5%;
 }
-
+.flex-item:hover {
+  background-color: #ff11ff;
+}
 .flex-item .img_container {
   height: 50%;
   width: 100%;
