--- a/styles.css
+++ b/styles.css
@@ -211,6 +211,7 @@ h2 {
   font-size: 3em;
   text-align: center;
   border-radius: 5%;
+  position: relative;
 }
 
 .flex-item .img_container {
@@ -227,4 +228,21 @@ h2 {
   font-family: Comic Sans MS, Comic Sans, cursive;
   font-size: 20px;
   color: #7572db;
+}
+button {
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  border: none;
+  padding: 0;
+  box-sizing: unset;
+  position: absolute;
+  top: 50%;
+  margin-top: -25px;
+  margin-left: -25px;
+}
+button img {
+  width: 50px;
+  height: 50px;
+  vertical-align: top;
 }
